erp5_web_renderjs_ui: update babylonjs libraries (version 6) and more - babylon gadget msg htm - babylonjs gadget fullscreen (includes mobile fix) - bug fix in offscreen canvas - scroll focus for usability

--- a/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_erp5_nojqm_css.css
+++ b/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_erp5_nojqm_css.css
@@ -1829,6 +1829,19 @@ div[data-gadget-scope='maximize'] button:active {
 .editor-maximize div[data-gadget-scope='editor'] iframe {
   height: 100%;
 }
+div[data-gadget-scope="babylonjs"] .fullscreen {
+  position: fixed;
+  left: 0;
+  top: 30pt;
+}
+div[data-gadget-scope="babylonjs"] .fullscreen-background {
+  position: fixed;
+  left: 0;
+  top: 30pt;
+  background-color: #FFFFFF;
+  width: 100vw;
+  height: calc(100vh -  30pt );
+}
 /**********************************************
 * Front page
 **********************************************/
